PXBF-1446-updated-button-styles: fix rem function wrap

--- a/benefit-finder/src/shared/styles/space/_index.scss
+++ b/benefit-finder/src/shared/styles/space/_index.scss
@@ -7,7 +7,7 @@ $space-md: rem(16px);
 $space-md-gap: rem(20px);
 $space-md-plus: rem(24px);
 $space-lg: rem(32px);
-$space-lg-plus: 4rem (0);
+$space-lg-plus: rem(40px);
 $space-xl: rem(64px);
 $space-xl-plus: rem(86px);
 $padding-bottom-sm: $space-sm;
